# refbox

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  refbox-embark.el  refbox-latex.el  refbox-markdown.el  refbox-org.el  refbox-rpc.el  refbox.el
.github/: install-emacs-packages.el
.github/workflows/: ci.yml  release.yml
bench/: profile-render.el  render-candidates.el
crates/refbox-bench/: Cargo.toml
crates/refbox-bench/src/: main.rs
crates/refbox-core/: Cargo.toml
crates/refbox-core/src/: lib.rs
crates/refbox-index/: Cargo.toml
crates/refbox-index/src/: lib.rs
crates/refbox-index/tests/: parser.rs  sync.rs
crates/refbox-index/tests/fixtures/: malformed.bib  mixed.bib  valid.bib
crates/refbox-rpc/: Cargo.toml
crates/refbox-rpc/src/: lib.rs
crates/refbox-store/: Cargo.toml
crates/refbox-store/src/: lib.rs
crates/refbox-store/tests/: store.rs
src/: main.rs
tests/: rpc_contract.rs  test-init.el  test-refbox-embark.el  test-refbox-latex.el  test-refbox-markdown.el  test-refbox-org.el  test-refbox.el
tests/fixtures/: duplicates-a.bib  duplicates-b.bib  malformed.bib  resources.bib  valid.bib
