[package]
name = "refbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local-first bibliography engine."
publish = false

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Ayan Das <bvits@riseup.net>"]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
globset = "0.4.18"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rusqlite = "0.39.0"
sha2 = "0.11.0"
thiserror = "2.0.16"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
refbox-core = { path = "crates/refbox-core" }
refbox-rpc = { path = "crates/refbox-rpc" }
