[package]
name = "refbox-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
refbox-rpc = { path = "../refbox-rpc" }
serde.workspace = true
serde_json.workspace = true
