[package]
name = "refbox-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
bundled-sqlite = ["rusqlite/bundled"]

[dependencies]
refbox-core = { path = "../refbox-core" }
rusqlite.workspace = true
thiserror.workspace = true

[dev-dependencies]
refbox-index = { path = "../refbox-index" }
